test/_generated-libs/undici-types/undici_types/errors/SecureProxyConnectionError.hx
package undici_types.errors;

@:jsRequire("undici-types", "errors.SecureProxyConnectionError") extern class SecureProxyConnectionError extends UndiciError {
	static var prototype : SecureProxyConnectionError;
}